--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,6 +18,22 @@
 
   </div>
   <!-- include javascript files here -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#copyBtn").click(function () {
+        const name = $(this).attr('name')
+        const el = document.getElementById(name)
+        const range = document.createRange()
+        range.selectNodeContents(el)
+        const sel = window.getSelection()
+        sel.removeAllRanges()
+        sel.addRange(range)
+        document.execCommand('copy')
+        return false
+      })
+    })
+  </script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
