--- a/views/shorten.hbs
+++ b/views/shorten.hbs
@@ -1,6 +1,12 @@
-<h5>Original: <a href="{{ originalUrl }}" target="_blank">{{ originalUrlShow }}</a></h5>
-<h5>Shorten: <a href="{{ shortenUrl }}" target="_blank">{{ shortenUrlShow }}</a></h5>
+<div class="d-flex align-items-center">
+  <h5>Original:</h5>
+  <a href="{{ originalUrl }}" target="_blank">{{ originalUrlShow }}</a>
+</div>
+<div class="d-flex align-items-center mt-1">
+  <h5>Shorten:</h5>
+  <a id="textArea" href="http://localhost:3000/{{ shortenUrl }}" target="_blank"> {{ shortenUrlShow}}</a>
+</div>
 <div>
-  <button class="btn btn-primary mt-4 mx-1" id="copyUrl">Copy URL</button>
+  <button class="btn btn-primary mt-4 mx-1" id="copyBtn" name="textArea">Copy URL</button>
   <a href="/" class="btn btn-dark mt-4 mx-1">Create another</a>
 </div>
