feat: add comment

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <form action="/shorten" method="post" style="text-align: center;">
   <label for="originalUrl">Enter an https:// URL:</label>
+  <!-- input should be url, not any invalid words or blank space -->
   <input type="url" class="form-control" name="originalUrl" id="originalUrl" placeholder="https://example.com"
     style="width: 20vw;" required />
   <button type="submit" class="btn btn-dark mt-3">Shorten</button>
